feat: add coupon system, checkout flow, auth, outbox and audit infrastructure